--- a/edge-service.yml
+++ b/edge-service.yml
@@ -1,2 +1,30 @@
 server:
   port: 9090
+spring:
+  cloud:
+    gateway:
+      discovery:
+        locator:
+          enabled: true
+          lowerCaseServiceId: true
+
+---
+spring:
+  config:
+    activate:
+      on-profile: default | dev
+---
+spring:
+  config:
+    activate:
+      on-profile: test
+server:
+  port: 9190
+
+---
+spring:
+  config:
+    activate:
+      on-profile: prod
+server:
+  port: 9990
