--- a/edge-service.yml
+++ b/edge-service.yml
@@ -7,7 +7,8 @@ spring:
         locator:
           enabled: true
           lowerCaseServiceId: true
-
+dmz:
+  microservices: config-service,gateway,edge-service,guardian,discovery-eureka
 ---
 spring:
   config:
