--- a/student-service.yml
+++ b/student-service.yml
@@ -1,7 +1,7 @@
 server:
   port: 8081
 simple:
-  envVal: This is a simple env value of default.
+  envVal: This is a simple env value of default Update.
 ---
 spring:
   config:
