--- a/application.yml
+++ b/application.yml
@@ -3,7 +3,7 @@ server:
 eureka:
   instance:
     hostname: localhost
-    preferIpAddress: true
+    preferIpAddress: false
     leaseRenewalIntervalInSeconds: 1
     leaseExpirationDurationInSeconds: 2
   client:
